--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <meta charset="UTF-8"/>
 
-<title>M.H. BALA SUBRAHMANYA</title>
+<title>Akash Singla</title>
 
-<meta name="author" content="Akash & Rishabh">
+<meta name="author" content="Akash Singla">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
@@ -33,8 +33,8 @@
 				<div class="container text-center" style="height:300px;padding-top:50px;">    <!--bootstrap.css-->
 					<a href="http://www.iisc.ac.in/"><img id="site-title"  src="img/IISc_logo.png" alt="logo" class="img-rounded" width="100" height="100"/></a>
 <!-- wow-data-delay="0.0s" wow-data-duration="0.9s"-->
-					<p class="intro1" >M.H. BALA SUBRAHMANYA</p>
-					<p class="intro2" >Professor,  Management Studies</p>
+					<p class="intro1" >Akash Singla</p>
+					<p class="intro2" >Associate Software Engineer, iManage</p>
 <!--wow-data-delay="0.4s" wow-data-duration="0.9s"-->
 				</div>
 			</div>
@@ -58,9 +58,10 @@
           <ul class="dropdown-menu" style="background-color: #18121E;">
             <li><a href="education.html" class="button-education">Education</a></li>
             <li><a href="work.html" class="button-work">Work Experience</a></li>
-            <li><a href="fellowships.html" class="button-fellow">Fellowships</a></li>
+            <!--<li><a href="fellowships.html" class="button-fellow">Fellowships</a></li>-->
           </ul>
         </li>
+	<!--
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown">Research<span class="caret"></span></a>
           <ul class="dropdown-menu"  style="background-color: #18121E;">
@@ -91,6 +92,7 @@
             <li><a href="rreport.html" class="button-rreports">Research Reports</a></li>
           </ul>
         </li>
+	-->
       </ul>
     </div>
   </div>
@@ -103,15 +105,13 @@
       </div>
       <div id="rightcol"> 
 
-        <b style="line-height: 2.0;">Dr. M.H.BALA SUBRAHMANYA</b><br/>
-        Professor <br/> 
-        Department of Management Studies<br/> 
-        Indian Institute of Science<br/> 
-        Bangalore – 560012, INDIA<br/> 
-        Phone : +91-80-22933266 (O)<br/> 
-        Fax : +91-80-23604534 <br/>
-        E-mail: bala@mgmt.iisc.ernet.in<br/>
-        &emsp;&emsp;&emsp;&nbsp; mungilabala@gmail.com<br/>
+        <b style="line-height: 2.0;">Akash Singla</b><br/>
+        Associate Software Engineer <br/> 
+        Reasearch & Development<br/> 
+        iManage<br/> 
+        Bangalore – 560034, INDIA<br/> 
+        Phone : +91-7888369335<br/> 
+        E-mail: akashsingla.p1@gmail.com<br/>
       </div>
       <div id="fullcol">
         <p align="center" class="heading3"></br> RESEARCH INTERESTS:</p>
