--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html" class="button-home"  style="background-color: #fff; color: #000000;">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">About Me <span class="caret"></span></a>
-          <ul class="dropdown-menu" style="background-color: #18121E;">
-            <li><a href="education.html" class="button-education">Education</a></li>
-            <li><a href="work.html" class="button-work">Work Experience</a></li>
+          <!--
+<li class="dropdown">
+<a class="dropdown-toggle" data-toggle="dropdown">About Me <span class="caret"></span></a>
+<ul class="dropdown-menu" style="background-color: #18121E;">
+<li><a href="education.html" class="button-education">Education</a></li>
+<li><a href="work.html" class="button-work">Work Experience</a></li>
+-->
             <!--<li><a href="fellowships.html" class="button-fellow">Fellowships</a></li>-->
           </ul>
         </li>
@@ -100,8 +102,7 @@
 		
 <div class="marker normal" id="home" >
      <div id="leftcol">
-         <img src="img/mhb.png" class="img-responsive" alt="Cinque Terre" width="
-        238px" height:auto>
+         <img src="img/mhb.png" class="img-responsive" alt="Cinque Terre" width="238px" height:auto>
       </div>
       <div id="rightcol"> 
 
